Change link to 'Contratos' to point to admin.html

--- a/grafico.html
+++ b/grafico.html
@@ -45,7 +45,7 @@
     <h1>Sistema de Contratos - Admin</h1>
     <div class="nav-links">
       <a href="index.html">Área do Cliente</a>
-      <a href="index.html">Contratos</a>
+      <a href="admin.html">Contratos</a>
       <a href="#">Gráficos</a>
       <button onclick="logoutAdmin()">Sair</button>
     </div>
