Update link for 'Contratos' in admin.html

--- a/admin.html
+++ b/admin.html
@@ -440,7 +440,7 @@
         <h1>Sistema de Contratos - Admin</h1>
         <div class="nav-links">
             <a href="index.html">Área do Cliente</a>
-            <a href="#" onclick="mostrarPainel(); return false;">Contratos</a>
+            <a href="admin.html"">Contratos</a>
             <a href="grafico.html" onclick="mostrarGraficos(); return false;">Gráficos</a>
 
             <button onclick="logoutAdmin()">Sair</button>
