Update navigation links in grafico.html

--- a/grafico.html
+++ b/grafico.html
@@ -45,8 +45,8 @@
     <h1>Sistema de Contratos - Admin</h1>
     <div class="nav-links">
       <a href="index.html">Área do Cliente</a>
-      <a href="admin.html">Contratos</a>
-      <a href="#">Gráficos</a>
+      <a href="admin.html">Contratos </a>
+      <a href="grafico.html">Gráficos</a>
       <button onclick="logoutAdmin()">Sair</button>
     </div>
   </div>
